--- a/q/274209.html
+++ b/q/274209.html
@@ -26,16 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>558</td><td>Uiua</td><td>240723T054957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274338#274338">Europe20</a></td></tr>
-<tr d-ix="1"><td>054</td><td>C gcc</td><td>240722T012045Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274314#274314">Digital </a></td></tr>
-<tr d-ix="2"><td>009</td><td>MATL</td><td>240717T162439Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274218#274218">Luis Men</a></td></tr>
-<tr d-ix="3"><td>064</td><td>Java</td><td>240719T190530Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274266#274266">swpalmer</a></td></tr>
-<tr d-ix="4"><td>036</td><td>Raku Perl 6 rakudo</td><td>240719T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274258#274258">bb94</a></td></tr>
-<tr d-ix="5"><td>068</td><td>Go</td><td>240718T005925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274224#274224">bigyihsu</a></td></tr>
-<tr d-ix="6"><td>030</td><td>JavaScript ES6</td><td>240717T160651Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274216#274216">Arnauld</a></td></tr>
-<tr d-ix="7"><td>036</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
-<tr d-ix="8"><td>016</td><td>K ngn/k</td><td>240719T041846Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274256#274256">akamayu</a></td></tr>
-<tr d-ix="9"><td>nan</td><td>Desmos</td><td>240719T014706Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274254#274254">W D</a></td></tr>
+<tr d-ix="0"><td>084</td><td>Desmos</td><td>240719T014706Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274254#274254">W D</a></td></tr>
+<tr d-ix="1"><td>558</td><td>Uiua</td><td>240723T054957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274338#274338">Europe20</a></td></tr>
+<tr d-ix="2"><td>054</td><td>C gcc</td><td>240722T012045Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274314#274314">Digital </a></td></tr>
+<tr d-ix="3"><td>009</td><td>MATL</td><td>240717T162439Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274218#274218">Luis Men</a></td></tr>
+<tr d-ix="4"><td>064</td><td>Java</td><td>240719T190530Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274266#274266">swpalmer</a></td></tr>
+<tr d-ix="5"><td>036</td><td>Raku Perl 6 rakudo</td><td>240719T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274258#274258">bb94</a></td></tr>
+<tr d-ix="6"><td>068</td><td>Go</td><td>240718T005925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274224#274224">bigyihsu</a></td></tr>
+<tr d-ix="7"><td>030</td><td>JavaScript ES6</td><td>240717T160651Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274216#274216">Arnauld</a></td></tr>
+<tr d-ix="8"><td>036</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
+<tr d-ix="9"><td>016</td><td>K ngn/k</td><td>240719T041846Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274256#274256">akamayu</a></td></tr>
 <tr d-ix="10"><td>018</td><td>x8664 machine code function</td><td>240718T195509Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274248#274248">Peter Co</a></td></tr>
 <tr d-ix="11"><td>007</td><td>Jelly</td><td>240717T141820Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274212#274212">hyper-ne</a></td></tr>
 <tr d-ix="12"><td>024</td><td>K ngn/k</td><td>240718T135912Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274244#274244">Ashy</a></td></tr>
@@ -48,12 +48,27 @@
 <tr d-ix="19"><td>011</td><td>Charcoal</td><td>240717T213655Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274223#274223">Neil</a></td></tr>
 <tr d-ix="20"><td>036</td><td>APL+WIN</td><td>240717T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274220#274220">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/pad?src=0_12_0-dev_2__YyDihpAgMTI4Ci_ihqfiiIo6KzMy4oehOTXijIril79jw7figb86Y-KHoeKMiOKCmWMuMTU3MDYxMzc1Cg==" rel="nofollow noreferrer">Uiua</a>, 55 bytes (UTF-8), 30 chars</h1>
+<div id="pu0" class="pu"><h1>Desmos, 84<sup><s>105</s></sup> bytes</h1>
+<p>Thanks to <a href="https://codegolf.stackexchange.com/users/96039/aiden-chow">Aiden Chow</a> for removing B(x) and <strong>21 bytes</strong></p>
+<pre><code>k=128
+f(n)=\left\{31&lt;mod(floor(n/k^{[0...floor(log_k(n+0^n))]}),k)&lt;k-1,0\right\}.min
+</code></pre>
+<p><a href="https://www.desmos.com/calculator/fl7hcccts3" rel="nofollow noreferrer">Try it on Desmos (with test cases)</a></p>
+<hr />
+<h2>Explanation</h2>
+
+<p><code>f(x)</code> checks each character's printability, returning 1 for printable text and 0 for unprintable text.</p>
+<hr />
+<p>If you are pasting this in to try yourself, you may need to &quot;activate&quot; the <code>f(n)</code> equation by focusing (clicking) on it and pressing either the left or right arrow key on your keyboard or the built-in Desmos keyboard. This seems to be because I don't use <code>\join</code> or <code>\floor</code> or <code>\mod</code>  so this solution is susceptible to Desmos bugfixes breaking my code I guess
+<br>
+<sub>Or you can paste in the <code>f(n)</code> line individually because that works I guess</sub></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/pad?src=0_12_0-dev_2__YyDihpAgMTI4Ci_ihqfiiIo6KzMy4oehOTXijIril79jw7figb86Y-KHoeKMiOKCmWMuMTU3MDYxMzc1Cg==" rel="nofollow noreferrer">Uiua</a>, 55 bytes (UTF-8), 30 chars</h1>
 <pre><code>c ← 128
 /↧∊:+32⇡95⌊◿c÷ⁿ:c⇡⌈ₙc.
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 54</h1>
+<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 54</h1>
 
 <p>Non recursive solution:</p>
 <pre class="lang-c prettyprint-override"><code>f(n,a){a=1;for(n=n?:1;n&amp;&amp;(a=isprint(n&amp;127));n&gt;&gt;=7);a;}
@@ -66,7 +81,7 @@
 </code></pre>
 <p><a href="https://tio.run/##XY/BTsMwDIbvfQpraCjRAiTpuoxm7R5k9DCl7bAE6bSUA1R99uIUwSYuifPpy2/bPZycm@7Qu7ePuoFd6GvsHl/L5Ipc/3luCE0n5vngC7/HcL6g75m/V9rwPfGyLAzPZa7s2P5aUc@lHSdSoW9C746hCYcKChikgGcBii6VCtBGpFpARmhrCOlNPOZqKyCVpGktFRkmeipdG6Xk/DszcqNSs76W2WiTJLZ8P6JnHIYEID7RUtF2F2BIE0gLCDsI@NV0Lfubjj/9JwdZcQurFf4kAcyrt2zRsmXNKWlZv/iFuFkQKwG3AVhxHnuPyTh9Aw" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>10</s> 9 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>10</s> 9 bytes</h1>
 <pre><code>7W_YA6Y2m
 </code></pre>
 <p>Outputs a vector of ones (which is <a href="https://codegolf.stackexchange.com/a/95057/36398">truthy</a>) or a vector containing at least a zero (which is <a href="https://codegolf.stackexchange.com/a/95057/36398">falsy</a>) depending on whether the result only uses printable ASCII or not.</p>
@@ -80,17 +95,17 @@ m     % Ismember (element-wise)
       % Implicit display
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h2><a href="https://ato.pxeger.com/run?1=VU9BbsIwELzzii1SkCOZyHYIDqSJqh4q9VD1wBFxcGlMXQUnsh0ahPKSXji0j-I3TYBW6mG1s5rdmdnPr3exE8dTsS6EtfAklIbDAKCqXwq1BuuE69quVK-w7Ti0cEbpzXIFwmysf14F6CWC2qkikLVeO1Xq4OEKbh-1yze5wfdlWeRCZyAh_a6dHMenu2acHZRETZoSv0lp8vGmihw1HmXxTUoZH43OOAupf2iyLOVJa3JXGw39SdJedUxyTiFLA2gnTB8N5v8CAiz21uXboKxdUHUfOImGnp2DZz09xP0uBhmIqir26Jo4qISxeTegjvV9_2LSDvr6dX5eEjzDlGAaYsZxyHA0wzHHlE276nuMQ0IwY4TiiHc8DSecUtKfRJxMacgnfyhaHS-6Pw" rel="nofollow noreferrer">Java</a>, 64 bytes</h2>
+<div id="pu4" class="pu"><h2><a href="https://ato.pxeger.com/run?1=VU9BbsIwELzzii1SkCOZyHYIDqSJqh4q9VD1wBFxcGlMXQUnsh0ahPKSXji0j-I3TYBW6mG1s5rdmdnPr3exE8dTsS6EtfAklIbDAKCqXwq1BuuE69quVK-w7Ti0cEbpzXIFwmysf14F6CWC2qkikLVeO1Xq4OEKbh-1yze5wfdlWeRCZyAh_a6dHMenu2acHZRETZoSv0lp8vGmihw1HmXxTUoZH43OOAupf2iyLOVJa3JXGw39SdJedUxyTiFLA2gnTB8N5v8CAiz21uXboKxdUHUfOImGnp2DZz09xP0uBhmIqir26Jo4qISxeTegjvV9_2LSDvr6dX5eEjzDlGAaYsZxyHA0wzHHlE276nuMQ0IwY4TiiHc8DSecUtKfRJxMacgnfyhaHS-6Pw" rel="nofollow noreferrer">Java</a>, 64 bytes</h2>
 <pre class="lang-java prettyprint-override"><code>x-&gt;{if(x==0)x=1;while(x%128!=127&amp;&amp;x%128&gt;31){x&gt;&gt;=7;}return x==0;}
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>41</s> 36 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>41</s> 36 bytes</h1>
 <p>Returns 0 for false and a non-zero integer for true.</p>
 <pre class="lang-perl prettyprint-override"><code>{$_*?(127&gt;.polymod(128 xx*).all&gt;31)}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=RY7BCoJAEIbvPsUgEiqr7Oy67oZkjxJC7CXNsARFPPYUXTxU79TbNJrQZeabf76BeTyb4tRO76qHjd292puNzMcbvEO491HoPL7UZV_VRxoMdF0YxEVZ5hKDcXXvmWPrBnzOYMsAqaFkIDQDKRgoygwxinQuCxlacfKE4EiGnj2UiUbky7nSPEWpkz-qAKIcvDMMDsC16MElpmSwFI5u5qzPTNOvfwE" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, <s>75</s> 68 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, <s>75</s> 68 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>func f(n int)bool{for k:=n;k&gt;0;k&gt;&gt;=7{if -^k%128&lt;33{n=0}}
 return n&gt;0}
 </code></pre>
@@ -101,7 +116,7 @@ return n&gt;0}
 <li>-7 bytes by @ovs, return the first <code>return</code> with <code>n=0</code>, forcing the final <code>return</code> to <code>false</code>.</li>
 </ul>
 </div>
-<div id="pu6" class="pu"><h1>JavaScript (ES6), 30 bytes</h1>
+<div id="pu7" class="pu"><h1>JavaScript (ES6), 30 bytes</h1>
 <p>Very similar to <a href="https://codegolf.stackexchange.com/a/274211/58563">Jitse's answer</a>.</p>
 <p>Returns <strong>0</strong> for <em>printable</em> or <strong>true</strong> for <em>non-printable</em>.</p>
 
@@ -117,7 +132,7 @@ return n&gt;0}
 </code></pre>
 <p><a href="https://tio.run/##ddDLCoJAGIbhfVdhi0DDcg7qGKW07gZamzpRyBhqrUSqfWDLCKJuzRuxAy7UmWb98DH/u3UPbuLFm106YpEfVBW1me2McjaAyJphnGVUZo5jE2XIKi9iSRQG4zBay1QGUv0URdI0ibphEkhyWRyVXhsiIob3LsSoBdN4/3PPrjMmAjftKosI1LKrIDJ5lfOKCE948dASwpOgCwZAaM8qVxABKJLXsrhxcUidsXmQ6nMfxTqBEEDQmpyXxaMsLitOGwSYEBO9ObqI@/k/aLRmP/LbqnoD" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 36 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 36 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:-~n%128&lt;33or f(n&gt;&gt;7)*n&gt;&gt;7
 </code></pre>
@@ -128,7 +143,7 @@ return n&gt;0}
 <p>-2 bytes thanks to Albert.Lang</p>
 <p>-1 byte thanks to Jonathan Allan</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 16 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 16 bytes</h1>
 <pre><code>1~&amp;/~32 127'128\
 
 
@@ -138,22 +153,6 @@ return n&gt;0}
 1~                 /is 1? (since the unit element for &amp; is 9223372036854775807
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJx10L0OgjAQB/Cdp0AGPxIId61QwMQw+wIuDmqUyQl1JeqmiQmOxsToq/EktgWTEs9uza/X+99lCRZdv+DMRiZ6yKKZZWWpvDbH97yxvcv3a7tfla+BtCAmbKQkEoRMlSALf6XQv4lvL0PclS4KBITIxdCkSd6RdXNIHK99HFkBditAtthsde6D+i7+g2fdC2i8aOQ0XhUyQeNDIUc9vCBfvOvNRCQem9QcgPSTq5szQEpvVXmvkw8FIsjpTE+r8inTL80lB60Xcssq3wfw3Ila" rel="nofollow noreferrer">Try it online!</a></p>
-</div>
-<div id="pu9" class="pu"><h1>Desmos, 105 bytes (105+10 bytes?)</h1>
-<pre><code>B(x)=\left\{x&lt;128:[x],join(B(floor(x/128)),mod(x,128))\right\}
-f(x)=total(\left\{31&lt;B(x)&lt;127:0,1\right\})
-</code></pre>
-<p><a href="https://www.desmos.com/calculator/ootyc7ax39" rel="nofollow noreferrer">Try it on Desmos (with test cases)</a></p>
-<hr />
-<h2>Explanation</h2>
-<p><code>B(x)</code> returns a list of <code>x</code>'s base 128 digits. For example, 4,294,967,295 returns <code>[15,127,127,127,127]</code> (and would return <code>[4,2,9,4,9,6,7,2,9,5]</code> if <code>B(x)</code> converted to base 10 instead of base 128)</p>
-<p><code>f(x)</code> checks each character's printability and sums it to return the amount of unprintable characters, <strong>returning 0 for printable text and a positive number for unprintable text</strong>
-<br>
-If you need a truthy and falsy compliant <code>f(x)</code> (1 for printable, 0 for unprintable) use <code>f(x)=1-sign(what it was before)^2</code> for <strong>105+10 bytes</strong>. <a href="https://www.desmos.com/calculator/0couamu9e7" rel="nofollow noreferrer">(try this on Desmos!)</a></p>
-<hr />
-<p>If you are pasting this in to try yourself, you must &quot;activate&quot; each equation (<code>B(x)</code> and <code>f(x)</code>) by clicking on it and pressing either the left or right arrow key on your keyboard or the built-in Desmos keyboard.
-<br>
-<sub>Or you can paste in lines individually because that works I guess</sub></p>
 </div>
 <div id="pu10" class="pu"><h1>x86-64 machine code function, 18 bytes</h1>
 <p>Integer arg in ECX, <code>bool</code> return value in AL (actually zero-extended to RAX).  If I'd used EDI for the arg, this would be compatible with the x86-64 System V calling convention.  As-is, it's Windows x64.</p>
