--- a/q/274690.html
+++ b/q/274690.html
@@ -26,29 +26,44 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>066</td><td>Setanta</td><td>240805T152743Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274707#274707">bb94</a></td></tr>
-<tr d-ix="1"><td>031</td><td>Arturo</td><td>240805T145757Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274706#274706">chunes</a></td></tr>
-<tr d-ix="2"><td>031</td><td>Google Sheets</td><td>240805T145357Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274705#274705">z..</a></td></tr>
-<tr d-ix="3"><td>006</td><td>Stack control</td><td>240805T134633Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274702#274702">Швеев Ал</a></td></tr>
-<tr d-ix="4"><td>033</td><td>Haskell</td><td>240805T142051Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274704#274704">DPD-</a></td></tr>
-<tr d-ix="5"><td>017</td><td>K ngn/k</td><td>240805T135303Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274703#274703">akamayu</a></td></tr>
-<tr d-ix="6"><td>nan</td><td>Uiua</td><td>240805T125637Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274700#274700">mousetai</a></td></tr>
-<tr d-ix="7"><td>030</td><td>R</td><td>240805T133004Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274701#274701">pajonk</a></td></tr>
-<tr d-ix="8"><td>036</td><td>Python 3</td><td>240805T125107Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274699#274699">Albert.L</a></td></tr>
-<tr d-ix="9"><td>045</td><td>Python 3</td><td>240805T113213Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274695#274695">Jitse</a></td></tr>
-<tr d-ix="10"><td>017</td><td>APL+WIN</td><td>240805T122405Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274698#274698">Graham</a></td></tr>
-<tr d-ix="11"><td>005</td><td>Jelly</td><td>240805T115728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274697#274697">Jonathan</a></td></tr>
+<tr d-ix="0"><td>004</td><td>Jelly</td><td>240805T115728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274697#274697">Jonathan</a></td></tr>
+<tr d-ix="1"><td>066</td><td>Setanta</td><td>240805T152743Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274707#274707">bb94</a></td></tr>
+<tr d-ix="2"><td>031</td><td>Arturo</td><td>240805T145757Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274706#274706">chunes</a></td></tr>
+<tr d-ix="3"><td>031</td><td>Google Sheets</td><td>240805T145357Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274705#274705">z..</a></td></tr>
+<tr d-ix="4"><td>006</td><td>Stack control</td><td>240805T134633Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274702#274702">Швеев Ал</a></td></tr>
+<tr d-ix="5"><td>033</td><td>Haskell</td><td>240805T142051Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274704#274704">DPD-</a></td></tr>
+<tr d-ix="6"><td>017</td><td>K ngn/k</td><td>240805T135303Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274703#274703">akamayu</a></td></tr>
+<tr d-ix="7"><td>nan</td><td>Uiua</td><td>240805T125637Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274700#274700">mousetai</a></td></tr>
+<tr d-ix="8"><td>030</td><td>R</td><td>240805T133004Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274701#274701">pajonk</a></td></tr>
+<tr d-ix="9"><td>036</td><td>Python 3</td><td>240805T125107Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274699#274699">Albert.L</a></td></tr>
+<tr d-ix="10"><td>045</td><td>Python 3</td><td>240805T113213Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274695#274695">Jitse</a></td></tr>
+<tr d-ix="11"><td>017</td><td>APL+WIN</td><td>240805T122405Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274698#274698">Graham</a></td></tr>
 <tr d-ix="12"><td>nan</td><td>C++</td><td>240805T110722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274692#274692">Redz</a></td></tr>
 <tr d-ix="13"><td>032</td><td>JavaScript Node.js</td><td>240805T112622Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274694#274694">l4m2</a></td></tr>
 <tr d-ix="14"><td>016</td><td>APL Dyalog Unicode</td><td>240805T110728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274693#274693">Ad&#225;</a></td></tr>
 <tr d-ix="15"><td>006</td><td>Vyxal</td><td>240805T110401Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274691#274691">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, <s>84</s> 66 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 5 </s> 4 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<p>-1 thanks to <a href="https://codegolf.stackexchange.com/users/85334/unrelated-string">Unrelated String</a>! (<code>*3S</code> {cube then sum} -&gt; <code>ḋ²</code> {dot-product with squared values}.)</p>
+<pre><code>ḋ²⁼V
+</code></pre>
+<p>A monadic Link that accepts a list of non-negative integers (with or without any leading zeros<sup>*</sup>) and yields <code>1</code> if the list concatenates to the sum of the cubes of its elements or <code>0</code> if not.</p>
+<p><strong><a href="https://tio.run/##ASIA3f9qZWxsef//4biLwrLigbxW/8OHxZLhuZj//1syLDIsMTNd" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> Or see the <a href="https://tio.run/##y0rNyan8///hju5Dmx417gn7r3O4/eikhztnPGpak/WoYY6CrZ3Co4a5mpH//0drGOqY6hhr6nApaBjpGOkYQpgmOgY65mCWoQGQaYBgGkKUAlVa6JhagjmWFjpGQARVb2amY2pgoGNsDDHJAihlamyhY2JuBJEHWgKzw1THDMwyQ1gB120CsccAZCeQBPJiAQ" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>.</p>
+<h4>How?</h4>
+<pre><code>ḋ²⁼V - Link: list, A = [a, b, c]
+ ²   - square {A} -&gt; [a², b², c²]
+ḋ    - {A} dot-product {that} -&gt; a³+b³+c³
+   V - evaluate {A} as Jelly code -&gt; concatenated integer *
+  ⁼  - {SumOfCubes} equals {that}?
+</code></pre>
+<p><sup>* Leading zeros produce a side effect of printing zeros before yielding the result.</sup></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, <s>84</s> 66 bytes</h1>
 <pre><code>gniomh(a,b,c){toradh a*a*a+b*b*b+c*c*c==go_uimh(nasc@[a,b,c](&quot;&quot;))}
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICw9diECw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 31 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 31 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>$-&gt;a-&gt;=do join a∑map a=&gt;[&amp;^3]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?MAzYSU" rel="nofollow noreferrer">Try it!</a></p>
@@ -60,11 +75,11 @@ do join a     ; concatenation of input as a number
 map a=&gt;[&amp;^3]  ; inputs cubed
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>Google Sheets, 31 bytes</h1>
+<div id="pu3" class="pu"><h1>Google Sheets, 31 bytes</h1>
 <pre class="lang-cpp prettyprint-override"><code>=SUMPRODUCT(A:A^3)=--JOIN(,A:A) 
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/CREAsTIVE/StackControl" rel="nofollow noreferrer">Stack control</a>, 6 characters</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/CREAsTIVE/StackControl" rel="nofollow noreferrer">Stack control</a>, 6 characters</h1>
 <pre><code>:³+⇆◡=
 </code></pre>
 <h2>Explanation</h2>
@@ -76,7 +91,7 @@ map a=&gt;[&amp;^3]  ; inputs cubed
 =  - check if values are equals
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1>Haskell, 33 bytes</h1>
+<div id="pu5" class="pu"><h1>Haskell, 33 bytes</h1>
 <pre class="lang-hs prettyprint-override"><code>(==).show.sum.map(^3)&lt;*&gt;(&gt;&gt;=show)
 </code></pre>
 <p><a href="https://tio.run/##y0gszk7NyfmfmVuQX1Si4JyfV1KUn6Pnm5@XmPI/zVbD1lZTrzgjv1yvuDRXLzexQCPOWNNGy07Dzs4WJKz5PzcxM0/BViEln0sBCApKS4JLinzyFFQUQNJAKk0h2lBHwVRHwTgWrwojkIr/AA" rel="nofollow noreferrer">Try it online!</a></p>
@@ -87,24 +102,24 @@ map a=&gt;[&amp;^3]  ; inputs cubed
 <li><code>&lt;*&gt;</code> feeds the input to both arguments</li>
 </ul>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 17 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 17 bytes</h1>
 <pre><code>{(,/$x)~$+/x*x*x}
 </code></pre>
 <p><a href="https://ngn.bitbucket.io/k#eJxVjUEOgzAMBO95BuJA6VY4ThwCJ57SE29AQvD2rqmo1DjKrpy1Z533DkO7Pc72OWw96whhXSIMiapQRDcZgtE/hEZuEz3CRIVNtFOF8l65UmAiSMmnK9uWKvKo4S1z8/o/zUVUfEGGQi0357coO0wcy/cDeL4mYQ==" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1>Uiua, <del>17</del> <del>14</del> 12 chars</h1>
+<div id="pu7" class="pu"><h1>Uiua, <del>17</del> <del>14</del> 12 chars</h1>
 <p>-3 chars thanks to Chunes by replacing <code>fork</code> with <code>on</code></p>
 <p>-2 chars thanks to OVS because I missed the existance of a power operator</p>
 <pre><code>=/+ⁿ3⟜⍜°⋕/⍚⊂
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_3__MV81XzMKPS8r4oG_M-KfnOKNnMKw4ouVL-KNmuKKggo=" rel="nofollow noreferrer">Pad Link</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 30 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 30 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(x)sum(x^3)==Reduce(paste0,x)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=VZBBDoIwEEXD1lPUuGnjGNoOLWXRS7g2JAZhZ2IEEu7iBk28hgfxNA5QCCbNb3_7Z-alj-e9f1X-3TbVwX1OvBN1e-VdjsL7Y3lpi5LfznVTSujEFPpGUcULrsAACrFjccxUjmzPzKhI6pkyuBlSGjQoio0mAQlpOCtJRq6NCkZThQOTBZs50LSWOmvBSAmIc1dHzwYdJKmmmylEU__Z9IoNNdsSocYAZcCGVnbNtAxKZjA5YJKK8BN9P-0_" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 36 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 36 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda*I:eval(3*&quot;%d&quot;%I+3*&quot;-%d**3&quot;%I)
 </code></pre>
@@ -112,7 +127,7 @@ map a=&gt;[&amp;^3]  ; inputs cubed
 <p><code>eval</code> golf of @Jitse's answer who generously declined to include it in their post.
 Returns zero for True and nonzero integer for False.</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 45 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 45 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda a,b,c:a**3+b**3+c**3-int(f'{a}{b}{c}')
 </code></pre>
@@ -125,26 +140,11 @@ Returns zero for True and nonzero integer for False.</p>
 </code></pre>
 <p><a href="https://tio.run/##PY3dCoMwDIXvfYreiM3IRm1trcLeZCAdKhP8Kc5t7ulduuGgaQ7Jd078e7lNo9ra82Xr3XCtHVvL@2Pgg/NcsVNVzX56VRWuAMduXLg6JHGdxCts7TSzbvRULMDN0/XIJt@MXACUEWN@DoaWEwSw8RQ1Koi4RIlpEBkKzKmngoTYRRoQIizqgmRhUdL7csagFgKVCm5LY60sZrkMOwr9ZWo01M0e@fdkIVeEC/TDBw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu10" class="pu"><h1>APL+WIN, 17 bytes</h1>
+<div id="pu11" class="pu"><h1>APL+WIN, 17 bytes</h1>
 <p>Prompts for integers.</p>
 <pre><code>(⍎∊⍕¨s)=+/(s←⎕)*3
 </code></pre>
 <p><a href="https://tio.run/##PY1NCsJADIX3OUWWrVKc/04XHkBQPEOpjAgDFmblBbQILW56B8/hUeYiY0ZUCMlHXt5L2/vqcGn9@Vh1vg3h1KU4zbttvD4kEG32RBzicHOpiOMUh3sc59czlOvlqggk0lG5kIkuIDngqFGCA4UMa3AInBEx2nyAEwiB3KJuCBuLgqrOsjGoGUMps93SWkuLqhZZQ/EN1Whoml/k36NyLssfqMMb" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
-</div>
-<div id="pu11" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 5 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>*3S⁼V
-</code></pre>
-<p>A monadic Link that accepts a list of non-negative integers (with or without any leading zeros<sup>*</sup>) and yields <code>1</code> if the list concatenates to the sum of the cubes of its elements or <code>0</code> if not.</p>
-<p><strong><a href="https://tio.run/##y0rNyan8/1/LOPhR456w/4fbj056uHPG///RRjpGOobGsQA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> Or see the <a href="https://tio.run/##y0rNyan8/1/LOPhR456w/zqH249OerhzxqOmNVmPGuYo2NopPGqYqxn5/3@0hqGOqY6xpg6XgoaRjpGOIYRpomOgYw5mGRoAmQYIpiFEKVClhY6pJZhjaaFjBERQ9WZmOqYGBjrGxhCTLIBSpsYWOibmRhB5oCUwO0x1zMAsM4QVcN0mEHsMQHYCSSAvFgA" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>.</p>
-<h4>How?</h4>
-<pre><code>*3S⁼V - Link: list, A
- 3    - three
-*     - {A} exponentiate {3} (vectorises)
-  S   - sum
-    V - evaluate {A} as Jelly code -&gt; concatenated integer *
-   ⁼  - {SumOfCubes} equals {that}?
-</code></pre>
-<p><sup>* Leading zeros produce a side effect of printing zeros before yielding the result.</sup></p>
 </div>
 <div id="pu12" class="pu"><h1>C++, <s>186</s> 165 bytes (-16 thanks to Mousetail)</h1>
 <pre><code>#include&lt;iostream&gt;
